class BleConstants {
  // UUIDs (Real ESP32 format from your device)
  static const String ledServiceUuid = 'efcdab90-7856-3412-efcd-ab9078563412';
  static const String led1CharUuid = '12345678-90ab-cdef-1234-567890abcd01';
  static const String led2CharUuid = '12345678-90ab-cdef-1234-567890abcd02';
  static const String led3CharUuid = '12345678-90ab-cdef-1234-567890abcd03';
  static const String led4CharUuid = '12345678-90ab-cdef-1234-567890abcd04';
}